# loan-app

./: README.md  documentation.txt  loan-app.postman_collection.json  pyproject.toml
loan_app/: app.py  enities.py
loan_app/service/: loan_service.py  payment_service.py  user_service.py
loan_app/storage/: customer_info.py  customer_info_storage.py  loan_info.py  payment_info.py
loan_app/tests/service/: loan_service_test.py  payment_service_test.py  user_service_test.py
loan_app/tests/storage/: customer_info_storage_test.py  loan_info_storage_test.py
loan_app/tests/utils/: authentication_utils_test.py
loan_app/utils/: authentication_utils.py
