[tool.poetry]
name = "loan-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "loan_app"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
pyjwt = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
